--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fetchmiddleware",
+  "name": "@yxtest/fetchmiddleware",
   "version": "1.0.0",
   "description": "fetch middleware",
   "main": "dist/index.cjs.js",
