--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "dom": [
-      "ES6"
+    "lib": [
+      "ES6",
+      "dom"
     ],
     "module": "esnext",
     "allowJs": true
@@ -10,6 +11,6 @@
     "node_modules/**",
   ],
   "include": [
-    "src/*",
+    "src/**/*",
   ]
 }
